# trait_variable

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  main.rs  path_utils.rs  refine_fn.rs  struct_macro.rs  trait_item.rs  trait_macro.rs  utils.rs
tests/: advance.rs  bak.rs  basic.rs  basic_trait_declarative_macro.rs  complex.rs  mod.rs  practical.rs  test.rs  whole.rs
tests/common/: mod.rs  test_struct.rs  utils.rs
tests/separate_def/: mod.rs
tests/struct_module/: mod.rs
tests/trait_module/: mod.rs
