[package]
    name="trait_variable"
    version="0.3.0"
    edition="2021"
    description="Make variable fields feasible in trait definition by (declarative and procedural) macros, which can be used for `struct` then."
    repository="https://github.com/dbsxdbsx/trait_variable"
    license="MIT"
    documentation="https://docs.rs/trait_variable"
    categories=[
        "development-tools::cargo-plugins",
        "development-tools::build-utils",
        "language-implementations",
    ]
    readme="README.md"
    exclude=["target/*", ".vscode/*", ".github/*", "tests/*", "justfile"]
    keywords=["trait", "variable", "type", "macro", "code-generation"]

[profile.release]
    lto          =true
    codegen-units=1
    strip        ="debuginfo"

[dependencies]
    paste="^1.0"
    quote="^1.0"
    # proc-macro2="^1.0"
    # syn        ={version="^1.0", features=["full"]}
    # # syn        ={version="^2.0", features=["full"]}

    # lazy_static="^1.4"
    # once_cell  ="^1.8"
    trait-variable-macros={git="https://github.com/dbsxdbsx/trait_variable_macros.git", features=[]}

[dev-dependencies]
