[package]
    name="trait_variable"
    version="0.6.0"
    edition="2021"
    description="Make variable fields feasible in trait definition."
    repository="https://github.com/dbsxdbsx/trait_variable"
    license="MIT OR Apache-2.0"
    documentation="https://docs.rs/trait_variable"
    categories=[
        "development-tools::cargo-plugins",
        "development-tools::build-utils",
        "language-implementations",
    ]
    readme="README.md"
    keywords=["trait", "variable", "type", "macro", "code-generation"]
    include=["CHANGELOG.md", "src/**/*", "Cargo.toml"]
    exclude=["target/*", ".vscode/*", ".github/*", "tests/*", "justfile"]

[badges]
    maintenance={status="actively-developed"}

[lib]
    proc-macro=true

[profile.release]
    lto          =true
    codegen-units=1
    strip        ="debuginfo"

[dependencies]
    quote      ="^1.0"
    proc-macro2="^1.0"
    syn        ={version="^2.0", features=["visit", "full", "parsing"]}
    paste      ="^1.0"
    regex      ="^1.5"

    lazy_static="^1.4"
    once_cell  ="^1.8"

    walkdir="^2.3"

    macro_state="*"
